user-repository/k8s/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-repository
spec:
  selector:
      matchLabels:
        app: user-repository
  replicas: 1
  strategy:
    # use Recreate strategy if older version of app is not compatible with new db
    type: Recreate
  template:
    metadata:
      labels:
        app: user-repository
    spec:
      containers:
        - name: user-repository
          image: markoniemi/user-repository:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 3                
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 3                
            failureThreshold: 2
      volumes:
      - name: flyway-sql
        configMap:
          name: migrate-db
