user-repository/k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: user-repository
spec:
  type: LoadBalancer
  selector:
    app: user-repository
  ports:
    - name: http
      protocol: TCP
      port: 8082
    - name: management
      protocol: TCP
      port: 8081
