user-repository/k8s/base/ingress.yaml
#traefik specific files must have unix line breaks

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: user-repository
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/users/api`)
      kind: Rule
      services:
        - name: user-repository
          port: 8082
      middlewares:
        - name: user-repository-stripprefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: user-repository-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /users
